--- a/android-engineer.html
+++ b/android-engineer.html
@@ -70,7 +70,7 @@
 <p><span class="badge badge-light">Atlanta</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://www.profocustechnology.com/jobs/android-engineer-beaverton-or/'>Android Engineer | Beaverton, OR - ProFocus Technology - Open IT Positions and Technology Job Postings</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.profocustechnology.com/jobs/android-engineer-beaverton-or/'>Android Engineer | Beaverton, OR - ProFocus Technology - Open IT Positions and Technology Job Postings</a></h5> 
 <p><span class="badge badge-light">Beaverton, OR Beaverton, OR</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -95,7 +95,7 @@ built an app with smart money management tools to help our customers live a?...<
 <p><span class="badge badge-light">San Diego, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999698315073-android-software-engineer-mobile'>CapTech Consulting Android Software Engineer - Mobile | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999698315073-android-software-engineer-mobile'>CapTech Consulting Android Software Engineer - Mobile | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Reston, VA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -145,7 +145,7 @@ built an app with smart money management tools to help our customers live a?...<
 <p><span class="badge badge-light">Jordan</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/gojek/2dd5091d-1994-4003-bbd5-e84056e8742d'>Gojek - Android Engineer - Developer Experience</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/gojek/2dd5091d-1994-4003-bbd5-e84056e8742d'>Gojek - Android Engineer - Developer Experience</a></h5> 
 <p><span class="badge badge-light">Jakarta</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -226,7 +226,7 @@ built an app with smart money management tools to help our customers live a?...<
 <p><span class="badge badge-light">Malaysia</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/nerdery/job/oRYnbfw7'>Nerdery Careers - Android Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/nerdery/job/oRYnbfw7'>Nerdery Careers - Android Engineer</a></h5> 
 <p><span class="badge badge-light">Minneapolis, Minnesota  Chicago, Illinois  Phoenix, Arizona</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
@@ -275,7 +275,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/M-TRIBESGmbH/743999697341092-senior-android-engineer-m-f-d-nis'>M-TRIBES GmbH Senior Android Engineer (m/f/d) - Ni? | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/M-TRIBESGmbH/743999697341092-senior-android-engineer-m-f-d-nis'>M-TRIBES GmbH Senior Android Engineer (m/f/d) - Ni? | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
@@ -287,14 +287,14 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">Mexico City, Mexico</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.github.com/positions/8ce73d82-fc32-4074-9187-12f042bb002a'>
+<h5><a href='https://jobs.github.com/positions/8ce73d82-fc32-4074-9187-12f042bb002a'>
       Sr. Android Engineer ?
       GitHub Jobs
     </a></h5> 
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on:: 2019-10-15</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/lextechglobalservices/jobs/4475163002'>Job Application for Android/Kotlin Software Engineer - Contractor at Lextech Global Services</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/lextechglobalservices/jobs/4475163002'>Job Application for Android/Kotlin Software Engineer - Contractor at Lextech Global Services</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
@@ -302,7 +302,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-14</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/spendesk/e67e26a0-74ac-461a-9365-1b745b37ee07'>Spendesk - Android Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/spendesk/e67e26a0-74ac-461a-9365-1b745b37ee07'>Spendesk - Android Engineer</a></h5> 
 <p><span class="badge badge-light">Paris  Paris Berlin</span></p>
 <p>Posted on: 2019-10-13</p>
 <hr/>
@@ -318,7 +318,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">Lisbon</span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
-<h5><a href='https://www.talkdesk.com/careers/td/lisbon/ambassadors/ambassadors-isel-1900048?gh_jid=1900048'>Android Software Engineer  [Lisbon] - Careers | Talkdesk</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.talkdesk.com/careers/td/lisbon/ambassadors/ambassadors-isel-1900048?gh_jid=1900048'>Android Software Engineer  [Lisbon] - Careers | Talkdesk</a></h5> 
 <p><span class="badge badge-light">Lisbon</span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
@@ -350,7 +350,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-10-10</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Square/743999697091104-senior-android-engineer'>Square Senior Android Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Square/743999697091104-senior-android-engineer'>Square Senior Android Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CAUnited States</span></p>
 <p>Posted on: 2019-10-10</p>
 <hr/>
@@ -390,11 +390,11 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/xfers/b34a45b5-9c54-4a9c-bd77-c86f49c883ce'>Xfers - Senior Android Engineer - Singapore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/xfers/b34a45b5-9c54-4a9c-bd77-c86f49c883ce'>Xfers - Senior Android Engineer - Singapore</a></h5> 
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/strategicemployment/job/fmxsyjz58msx5eyt3dshkfmx3c'>Senior Android Engineer (Android, Java 7/8, OR Kotlin/SQL-Lite) | Strategic Employment</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/strategicemployment/job/fmxsyjz58msx5eyt3dshkfmx3c'>Senior Android Engineer (Android, Java 7/8, OR Kotlin/SQL-Lite) | Strategic Employment</a></h5> 
 <p><span class="badge badge-light">Waltham, MA</span></p>
 <p>Posted on: 2019-10-07</p>
 <hr/>
@@ -434,7 +434,7 @@ mission to help parents teach financial literacy to kids.</p>
 <p><span class="badge badge-light">Amsterdam, Netherlands</span></p>
 <p>Posted on: 2019-10-06</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tribalscale.workable.com/j/3ABCE94131'>TribalScale - Jobs: Android Engineer - Toronto - Apply online</a></h5> 
+<h5><a href='https://tribalscale.workable.com/j/3ABCE94131'>TribalScale - Jobs: Android Engineer - Toronto - Apply online</a></h5> 
 <p><span class="badge badge-light">Toronto Toronto  Toronto  Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-10-06</p>
 <hr/>
